environments/dev/service_mesh/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: yas-dev-strict-mtls
  namespace: yas-dev
spec:
  mtls:
    mode: STRICT
