environments/dev/service_mesh/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: yas-dev-mtls-default
  namespace: yas-dev
spec:
  host: "*.yas-dev.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
