environments/dev/service_mesh/istio/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-storefront-bff-to-media
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: media
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/storefront-bff
              - cluster.local/ns/yas-dev/sa/nginx
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-order-callers
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: order
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/storefront-bff
              - cluster.local/ns/yas-dev/sa/nginx
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/payment
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/rating
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-storefront-bff-to-payment
  namespace: yas-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: payment
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/yas-dev/sa/storefront-bff
              - cluster.local/ns/yas-dev/sa/nginx
